# finRAG

./: .env.example  .gitignore  README.md  agent.py  ingest_cli.py  main.py  pyproject.toml
agents/: __init__.py  mcp_agent.py  orchestrator.py  rag_agent.py
agents/.adk/: session.db
config/: __init__.py  settings.py
docs/: ARCHITECTURE.md  FinRAG_System_Architecture.docx
mcp_server/: __init__.py  server.py
rag/: __init__.py  ingest.py  retriever.py
rag/.adk/: session.db
